--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,12 +8,12 @@
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 left-0 drop-shadow-2xl max-w-[500px] max-h-[500px] object-contain -mb-16"
+    class="absolute bottom-0 left-0 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 right-0 drop-shadow-2xl max-w-[500px] max-h-[500px] object-contain -mb-12"
+    class="absolute bottom-0 right-0 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
   />
 
   <img
@@ -24,6 +24,6 @@
   <img
     src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-12 left-1/2 transform -translate-x-1/2 w-full h-[50%] max-w-none object-cover z-[-1]"
+    class="absolute bottom-20 left-1/2 transform -translate-x-1/2 w-full h-[35%] max-w-none object-cover z-[-1]"
   />
 </section>
