--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<section id="about" class="mx-10 pt-20">
-  <h3 class="pb-3 font-bold">Where Pets are People too</h3>
+<section id="about" class="mx-80 pt-20">
+  <h1 class="mx-24 pb-6 font-bold text-3xl">Where Pets are People too</h1>
   <p class="mx-10">
     Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
     adipiscing ante posuere egestas penatibus sollicitudin. Placerat odio
