--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -1,13 +1,13 @@
 ---
 interface OpenStatusProps {
-  storeStatus: string,
+  storeStatus: string;
 }
 
-import { getStoreStatus } from './StoreHours.astro';
+import { getStoreStatus } from "./StoreHours.astro";
 
-const storeStatus = getStoreStatus() as OpenStatusProps['storeStatus'];
+const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
 ---
 
 <div>
-  <p>{storeStatus}</p>
+  <p class="font-bold">{storeStatus}</p>
 </div>
