--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -2,7 +2,9 @@
 import StaffCarousel from "../ui/StaffCarousel.astro";
 ---
 
-<section class="mx-10 pt-10">
-  <h3 class="pb-3 font-bold">Our Staff</h3>
-  <StaffCarousel />
+<section class="px-10 py-10 bg-[#7F0201] tracking-wider">
+  <h3 class="pb-3 font-bold text-white">Our Staff</h3>
+  <div class="flex justify-center">
+    <StaffCarousel />
+  </div>
 </section>
