--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -4,7 +4,7 @@ import ReviewsCard from "../ui/ReviewsCard.jsx";
 const businessId = "YOUR_BUSINESS_ID";
 ---
 
-<div class="container mx-auto pt-10">
+<div class="flex justify-center pt-10">
   <ReviewsCard businessId={businessId} client:load />
   <ReviewsCard businessId={businessId} client:load />
   <ReviewsCard businessId={businessId} client:load />
