Implement outline for StaffCarousel coverflow

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -30,6 +30,9 @@ import "@/styles/globals.css";
   <body>
     <Header transition:persist />
     <slot />
+    <script
+      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
+    ></script>
   </body>
 </html>
 
