--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -1,9 +1,9 @@
 ---
-import StaffCarousel from "../ui/StaffCarousel.astro";
+import StaffCarousel from "../ui/StaffCarousel.tsx";
 ---
 
 <section class="px-10 py-10 bg-[#7F0201] tracking-wider">
-  <h3 class="pb-3 font-bold text-white">Our Staff</h3>
+  <h3 class="pb-3 font-bold text-white">Our Team</h3>
   <div class="flex justify-center">
     <StaffCarousel />
   </div>
