Implement revised staffList carousel

--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -40,7 +40,7 @@ const { class: navbarClass = "" } = Astro.props;
     <!-- <img
       src="src/assets/openclose.png"
       alt="Open/Close Sign Background"
-      class="absolute h-[50px] w-[150px] -mt-5"
+      class="absolute h-[50px] w-auto -mt-5"
     /> -->
     <OpenStatus transition:persist class="absolute" />
   </div>
