--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -24,6 +24,6 @@
   <img
     src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-20 left-1/2 transform -translate-x-1/2 w-full h-[35%] max-w-none object-cover z-[-1]"
+    class="absolute bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] max-w-none object-cover -mb-28 z-[-1]"
   />
 </section>
