--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -9,5 +9,7 @@ const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
 ---
 
 <div class="z-30">
-  <p class="font-bold">{storeStatus}</p>
+  <p class="font-bold text-xl text-[#FFC66D] text-outline -mt-3">
+    {storeStatus}
+  </p>
 </div>
