--- a/src/components/ui/Map.astro
+++ b/src/components/ui/Map.astro
@@ -5,7 +5,7 @@ const API_KEY = publicKey;
 const ADDRESS = "86 Worcester Rd, Webster, MA 01570";
 ---
 
-<div id="map"></div>
+<div id="map" class="w-[30%] h-[400px]"></div>
 
 <script define:vars={{ API_KEY, ADDRESS }}>
   async function initMap() {
@@ -48,10 +48,3 @@ const ADDRESS = "86 Worcester Rd, Webster, MA 01570";
     loadGoogleMapsScript();
   }
 </script>
-
-<style>
-  #map {
-    width: 30%;
-    height: 250px; /* Adjust the height as needed */
-  }
-</style>
