--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -28,7 +28,7 @@ import "@/styles/globals.css";
     <ViewTransitions fallback="animate" />
   </head>
   <body>
-    <Header transition:persist />
+    <Header client:load />
     <slot />
     <script
       src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
