--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -6,7 +6,7 @@ interface HeaderProps {
 import Announcements from "./Announcements.astro";
 import Navbar from "./Navbar.astro";
 
-const { activeAnnouncement = true } = Astro.props as HeaderProps;
+const { activeAnnouncement = false } = Astro.props as HeaderProps;
 ---
 
 <!-- A small invisible trigger element above the header to control sticky behavior -->
@@ -14,7 +14,7 @@ const { activeAnnouncement = true } = Astro.props as HeaderProps;
 
 <header id="header">
   <Announcements id="announcements" isVisible={activeAnnouncement} />
-  <Navbar id="navbar" class={activeAnnouncement ? "pt-6" : "pt-10"} />
+  <Navbar id="navbar" class={activeAnnouncement ? "pt-8" : "pt-10"} />
 </header>
 
 <!-- Spacer to preserve space when header becomes sticky -->
