--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="products" class="mx-10 pt-10">
+<section id="products" class="mx-10 py-10">
   <h3 class="pb-3 font-bold">Products</h3>
   <p class="mx-10">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
