--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Header from "../sections/Header.astro";
 import { ViewTransitions } from "astro:transitions";
 
 import "@/styles/globals.css";
+import Footer from "../sections/Footer.astro";
 ---
 
 <!doctype html>
@@ -30,9 +31,7 @@ import "@/styles/globals.css";
   <body>
     <Header transition:persist />
     <slot />
-    <script
-      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
-    ></script>
+    <Footer />
   </body>
 </html>
 
