--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -3,7 +3,9 @@
 ---
 
 <section id="about" class="mx-80 pt-20">
-  <h1 class="mx-24 pb-6 font-bold text-3xl">Where Pets are People too</h1>
+  <h1 class="mx-24 pb-6 font-bold text-3xl tracking-widest">
+    Where Pets are People too
+  </h1>
   <p class="mx-10">
     Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
     adipiscing ante posuere egestas penatibus sollicitudin. Placerat odio
