--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -3,7 +3,7 @@
 ---
 
 <section id="products" class="mx-10 py-10">
-  <h3 class="pb-3 font-bold">Products</h3>
+  <h3 class="pb-3 font-bold tracking-widest">Products</h3>
   <p class="mx-10">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
     maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
