--- a/src/components/ui/Map.astro
+++ b/src/components/ui/Map.astro
@@ -5,7 +5,7 @@ const API_KEY = publicKey;
 const ADDRESS = "86 Worcester Rd, Webster, MA 01570";
 ---
 
-<div id="map" class="w-[80%] h-[400px]"></div>
+<div id="map" class="w-[80%] h-[400px] rounded-2xl"></div>
 
 <script define:vars={{ API_KEY, ADDRESS }}>
   async function initMap() {
