--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -3,5 +3,5 @@
 ---
 
 <section id="blog" class="mx-10 pt-10">
-  <h3 class="pb-3 font-bold">Blog</h3>
+  <h3 class="pb-3 font-bold tracking-widest">Recent Blog Posts</h3>
 </section>
