--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -5,22 +5,43 @@ import { getStoreHours } from "../../constants/StoreInfo.astro";
 import Map from "../ui/Map.astro";
 
 const storeHours = getStoreHours();
+
+function convertTo12Hour(time24: string) {
+  const [hours] = time24.split(":");
+  let period = "AM";
+  let hours12 = parseInt(hours, 10);
+
+  if (hours12 >= 12) {
+    period = "PM";
+    if (hours12 > 12) {
+      hours12 -= 12;
+    }
+  }
+  if (hours12 === 0) {
+    hours12 = 12;
+  }
+
+  return `${hours12}${period}`;
+}
 ---
 
-<section class="flex flex-1 justify-center p-10 bg-[#FFC66D]">
-  <div class="flex flex-1 justify-center">
-    <ContactForm client:load />
-  </div>
-
-  <div class="flex-1 text-center">
-    <h3 class="font-bold">Store Hours</h3>
+<section class="flex flex-1 justify-center p-32 bg-[#FFC66D]">
+  <div class="flex-1 text-center my-auto">
+    <h3 class="font-bold text-2xl pb-3 tracking-widest">Store Hours</h3>
     {
       Object.entries(storeHours).map(([day, hours]) => (
-        <div class="flex justify-center">
-          {day}: {hours.open} to {hours.close}
+        <div class="flex text-xl justify-center">
+          {day}: {convertTo12Hour(hours.open)} to {convertTo12Hour(hours.close)}
         </div>
       ))
     }
+
+    <h3 class="font-bold text-2xl pt-10 tracking-widest">
+      Have Any Questions?
+    </h3>
+    <div class="flex flex-1 text-2xl pt-4 justify-center">
+      <ContactForm client:load />
+    </div>
   </div>
 
   <div class="flex flex-1 justify-center">
