Further stylings to StaffCarousel

--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -2,6 +2,8 @@
 
 ---
 
-<section id="blog" class="mx-10 pt-10">
-  <h3 class="pb-3 font-bold tracking-widest">Recent Blog Posts</h3>
+<section id="blog" class="mx-10 pt-10 min-h-[700px]">
+  <h3 class="mx-24 pb-3 font-bold text-3xl tracking-widest">
+    Recent Blog Posts
+  </h3>
 </section>
