--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -3,5 +3,8 @@
 ---
 
 <section class="pb-10 bg-[#FFC66D] -mt-1">
-  <h3>Footer</h3>
+  <h3 class="flex justify-center text-widest text-xl">
+    Designed and Developed by&nbsp;
+    <a href="https://www.jdegaetano.com">Justin DeGaetano</a>
+  </h3>
 </section>
