--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,4 +1,4 @@
-<section class="relative mx-auto flex flex-col items-center">
+<section id="hero" class="relative mx-auto flex flex-col items-center">
   <img
     src="https://placehold.co/500x200"
     alt="PT Pet Supply logo"
