--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -77,7 +77,7 @@ const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
 <div class="z-10">
   <Button
     text={storeStatus}
-    href="/"
+    href="/#hero"
     class="flex justify-center font-bold text-xl text-[#FFC66D] text-outline tracking-wide -mt-3"
   />
 </div>
