--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -6,18 +6,19 @@ import { getStaffList } from "../../constants/StoreInfo.astro";
 const defaultStaffList = getStaffList();
 ---
 
-<section id="staff" class="relative py-10 tracking-wider">
+<section id="staff" class="relative py-10 tracking-wider text-center">
   <img
     src="src/assets/panel.png"
     alt="Wood paneling background"
     class="absolute z-[-2] inset-0 w-full h-full object-cover"
   />
   <h3
-    class="px-10 pb-5 font-bold text-3xl tracking-widest text-white text-outline-white flex justify-center"
+    class="inline-block p-6 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
+    style={{ backdropFilter: "blur(35px)" }}
   >
     Meet Our Team
   </h3>
-  <div class="flex justify-center pb-5">
+  <div class="flex justify-center py-5">
     <StaffCarousel staffList={defaultStaffList} client:idle />
   </div>
 </section>
