--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -12,7 +12,7 @@ import Footer from "../sections/Footer.astro";
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
     <title>PT Pet Supply</title>
     <link
