--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,12 +8,12 @@
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 left-0 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
+    class="absolute bottom-0 left-0 md:pl-8 xl:pl-24 2xl:pl-48 3xl:pl-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 right-0 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
+    class="absolute bottom-0 right-0 md:pr-8 xl:pr-24 2xl:pr-48 3xl:pr-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
   />
 
   <img
