--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -3,7 +3,7 @@
 ---
 
 <section id="products" class="mx-36 py-10 pt-10 min-h-[700px]">
-  <h3 class="mx-24 pb-3 font-bold text-3xl tracking-widest">Products</h3>
+  <h3 class="mx-24 pb-6 font-bold text-3xl tracking-widest">Products</h3>
   <p class="mx-10">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
     maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
@@ -16,4 +16,22 @@
     porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
     odio posuere hac senectus posuere lectus nullam?
   </p>
+  <div class="pt-8">
+    <ul class="grid grid-cols-2 gap-4 text-center">
+      <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+      <li>Aliquam tincidunt mauris eu risus.</li>
+      <li>Vestibulum auctor dapibus neque.</li>
+      <li>Nunc dignissim risus id metus.</li>
+      <li>Cras ornare tristique elit.</li>
+      <li>Vivamus vestibulum ntulla nec ante.</li>
+      <li>Praesent placerat risus quis eros.</li>
+      <li>Fusce pellentesque suscipit nibh.</li>
+      <li>Integer vitae libero ac risus egestas placerat.</li>
+      <li>Vestibulum commodo felis quis tortor.</li>
+      <li>Ut aliquam sollicitudin leo.</li>
+      <li>Cras iaculis ultricies nulla.</li>
+      <li>Donec quis dui at dolor tempor interdum.</li>
+      <li>Vivamus vestibulum ntulla nec ante.</li>
+    </ul>
+  </div>
 </section>
