--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -6,4 +6,12 @@
   <h3 class="mx-24 pb-3 font-bold text-3xl tracking-widest">
     Recent Blog Posts
   </h3>
+
+  <div>
+    <!-- <BlogCard /> -->
+  </div>
+
+  <div class="flex flex-1 justify-center font-bold text-2xl tracking-wider">
+    <a href="/blog/">View More</a>
+  </div>
 </section>
